# comp-graph-python

./: .gitignore  .pre-commit-config.yaml  README.md  gitdiff.txt  pyproject.toml
src/cg_examples/ex01_hello_opengl/: __main__.py
src/cg_examples/ex01_pyqt6_hello_ogl_modern/: README.md  __init__.py  __main__.py  mainwindow.py
src/cg_examples/ex01_pyqt6_hello_ogl_modern/view/: __init__.py  glcanvas.py  renderer.py  shaders.py
src/cg_examples/ex02_test_glut/: __main__.py
src/cg_examples/ex03_opengl_tutorial1/: __main__.py
src/cg_examples/ex04_test_glfw/: __main__.py
src/cg_examples/ex05_ColorPicker/: ColorPickerExemplo.py  ColorPickerMain.py  __main__.py
src/cg_examples/ex06_2D_editor/: CG_Aula1.py  README.md  __main__.py  editor_2D.py
src/cg_examples/ex06_2D_editor/globals/: settings.py
src/cg_examples/ex06_2D_editor/model/: circulo.py  modelo.py  poligono.py  ponto.py
src/cg_examples/ex06_2D_editor/state/: abstractState.py  addPolygonPointState.py  context.py  endCircleState.py  idleState.py  initCircleState.py  initPolygonState.py  state.py
src/cg_examples/ex06_2D_editor/view/: draw_utils.py  mouseinteractor.py
src/cg_examples/ex07_2D_Editor_Qt/: README.md  __main__.py  mainwindow.py
src/cg_examples/ex07_2D_Editor_Qt/glmodern/: buffer_object.py  renderer2d.py  shader_program.py  vao_manager.py
src/cg_examples/ex07_2D_Editor_Qt/glmodern/shaders/: basic.frag  basic.vert
src/cg_examples/ex07_2D_Editor_Qt/globals/: __init__.py  settings.py
src/cg_examples/ex07_2D_Editor_Qt/model/: __init__.py  circulo.py  modelo.py  poligono.py  ponto.py  transform_ops.py
src/cg_examples/ex07_2D_Editor_Qt/state/: __init__.py  abstractState.py  abstract_state.py  addPolygonPointState.py  context.py  drawCircleState.py  drawPolygonState.py  draw_circle_state.py  draw_polygon_state.py  endCircleState.py  idleState.py  idle_state.py  initCircleState.py  initPolygonState.py  state.py  transform_mode.py  transform_state.py
src/cg_examples/ex07_2D_Editor_Qt/utils/: floatcmp.py
src/cg_examples/ex07_2D_Editor_Qt/view/: draw_utils.py  glcanvas.py  renderers.py  selection_render.py
src/cg_examples/ex08_2D_simple_ogl_modern/: README.md  __init__.py  __main__.py  mainwindow.py
src/cg_examples/ex08_2D_simple_ogl_modern/globals/: __init__.py  settings.py
src/cg_examples/ex08_2D_simple_ogl_modern/model/: __init__.py  modelo.py  ponto.py  segmento.py
src/cg_examples/ex08_2D_simple_ogl_modern/state/: __init__.py  abstract_state.py  context.py  idle_state.py
src/cg_examples/ex08_2D_simple_ogl_modern/view/: __init__.py  glcanvas.py  renderer.py  shaders.py
