[project]
name = "comp-graph-python"
version = "0.1.0"
description = "Exemplos de Computação Gráfica em Python"
authors = [
    {name = "Paulo Cesar Rodacki Gomes",email = "paulo.gomes@ifc.edu.br"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "PyOpenGL (>=3.1.9,<4.0.0)",
    "PyOpenGL-accelerate (>=3.1.9,<4.0.0)",
    "pyglet (>=2.1.6,<3.0.0)",
    "glfw (>=2.9.0,<3.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "qtawesome (>=1.4.0,<2.0.0)",
]

[project.optional-dependencies]
mac = [
  "pyobjc-framework-Cocoa>=10.2,<11.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "cg_examples", from = "src" }]

[project.scripts]
ex01-hello = "cg_examples.ex01_hello_opengl.__main__:main"
ex02-test-glut = "cg_examples.ex02_test_glut.__main__:main"
ex03-tutorial1 = "cg_examples.ex03_opengl_tutorial1.__main__:main"
ex04-glfw = "cg_examples.ex04_test_glfw.__main__:main"
ex05-color = "cg_examples.ex05_ColorPicker.__main__:main"
ex06-editor = "cg_examples.ex06_2D_editor.__main__:main"
ex07-pyqt-opengl = "cg_examples.ex07_2D_Editor_Qt.__main__:main"

[tool.poetry.group.moderngl.dependencies]
moderngl = "^5.12.0"

