[project]
name = "comp-graph-python"
version = "0.1.0"
description = "Exemplos de Computação Gráfica em Python"
authors = [
    {name = "Paulo Cesar Rodacki Gomes",email = "paulo.gomes@ifc.edu.br"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "PyOpenGL (>=3.1.9,<4.0.0)",
    "PyOpenGL-accelerate (>=3.1.9,<4.0.0)",
    "pyglet (>=2.1.6,<3.0.0)",
    "glfw (>=2.9.0,<3.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "pyqt6 (>=6.7.1,<7.0.0)",
    "qtawesome (>=1.4.0,<2.0.0)",
]

[project.optional-dependencies]
mac = [
  "pyobjc-framework-Cocoa>=10.2,<11.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "cg_examples", from = "src" }]

[project.scripts]
ex01-pyqt6-hello-ogl-modern = "cg_examples.ex01_pyqt6_hello_ogl_modern.__main__:main"
ex01-hello = "cg_examples.ex01_hello_opengl.__main__:main"
ex02-test-glut = "cg_examples.ex02_test_glut.__main__:main"
ex03-tutorial1 = "cg_examples.ex03_opengl_tutorial1.__main__:main"
ex04-glfw = "cg_examples.ex04_test_glfw.__main__:main"
ex05-color = "cg_examples.ex05_ColorPicker.__main__:main"
ex06-editor = "cg_examples.ex06_2D_editor.__main__:main"
ex07-pyqt-opengl = "cg_examples.ex07_2D_Editor_Qt.__main__:main"
ex08-simple-ogl-modern = "cg_examples.ex08_2D_simple_ogl_modern.__main__:main"

[tool.poetry.group.moderngl.dependencies]
moderngl = "^5.12.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"
black = "^25.9.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Ignore tudo que não seja ex07 (reforço extra; opcional)
extend-exclude = [
  "src/cg_examples/ex01_hello_opengl",
  "src/cg_examples/ex02_test_glut",
  "src/cg_examples/ex03_opengl_tutorial1",
  "src/cg_examples/ex04_test_glfw",
  "src/cg_examples/ex05_ColorPicker",
  "src/cg_examples/ex06_2D_editor",
  "src/**/__pycache__"
]

[tool.ruff.lint]
# Conjuntos de regras:
# E/W = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade,
# B = bugbear, N = pep8-naming, C90 = mccabe (complexidade ciclômica)
select = ["E","F","W","I","UP","B","N","C90"]
ignore = ["E203","E501"]  # compatível com black


[tool.ruff.lint.isort]
known-first-party = ["cg_examples"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"src/cg_examples/ex03_opengl_tutorial1/__main__.py" = ["F403", "F405"]
"src/cg_examples/ex02_test_glut/__main__.py" = ["N802", "N806"]
"src/cg_examples/ex07_2D_Editor_Qt/view/glcanvas.py" = ["N802"]
"src/cg_examples/ex07_2D_Editor_Qt/state/idle_state.py" = ["N802"]
"src/cg_examples/ex08_2D_simple_ogl_modern/view/glcanvas.py" = ["N802"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
